[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/map/Tile.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/match/Match.gd" type="Script" id=2]
[ext_resource path="res://source/hand/Hand.tscn" type="PackedScene" id=3]

[node name="Match" type="Node2D" groups=[
"Match",
]]
script = ExtResource( 2 )

[node name="Board" type="Node2D" parent="."]
position = Vector2( 860, 440 )

[node name="Row1" type="Node2D" parent="Board"]
position = Vector2( 0, -230 )

[node name="T1" parent="Board/Row1" instance=ExtResource( 1 )]
margin_left = -210.0
margin_right = -30.0
neighbors = [ Vector2( 1, 0 ), Vector2( 1, 1 ), Vector2( 0, 1 ) ]

[node name="T2" parent="Board/Row1" instance=ExtResource( 1 )]
neighbors = [ Vector2( 0, 0 ), Vector2( 2, 0 ), Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ) ]

[node name="T3" parent="Board/Row1" instance=ExtResource( 1 )]
margin_left = 210.0
margin_right = 390.0
neighbors = [ Vector2( 2, 0 ), Vector2( 2, 1 ), Vector2( 1, 1 ) ]

[node name="Row2" type="Node2D" parent="Board"]

[node name="T1" parent="Board/Row2" instance=ExtResource( 1 )]
margin_left = -280.0
margin_right = -100.0
neighbors = [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 1, 1 ), Vector2( 1, 2 ), Vector2( 0, 2 ) ]

[node name="T2" parent="Board/Row2" instance=ExtResource( 1 )]
neighbors = [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 0, 1 ), Vector2( 2, 1 ), Vector2( 0, 2 ), Vector2( 1, 2 ), Vector2( 2, 2 ) ]

[node name="T3" parent="Board/Row2" instance=ExtResource( 1 )]
margin_left = 280.0
margin_right = 460.0
neighbors = [ Vector2( 2, 0 ), Vector2( 1, 0 ), Vector2( 1, 1 ), Vector2( 1, 2 ), Vector2( 2, 2 ) ]

[node name="Row3" type="Node2D" parent="Board"]
position = Vector2( 0, 230 )

[node name="T1" parent="Board/Row3" instance=ExtResource( 1 )]
margin_left = -210.0
margin_right = -30.0
neighbors = [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 1, 2 ) ]

[node name="T2" parent="Board/Row3" instance=ExtResource( 1 )]
neighbors = [ Vector2( 0, 2 ), Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 2, 2 ) ]

[node name="T3" parent="Board/Row3" instance=ExtResource( 1 )]
margin_left = 210.0
margin_right = 390.0
neighbors = [ Vector2( 1, 2 ), Vector2( 1, 1 ), Vector2( 2, 1 ) ]

[node name="Units" type="Node2D" parent="Board"]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Hand" parent="HUD" instance=ExtResource( 3 )]
